# CSI4900_Project

./: CMakeLists.txt  CMakePresets.json  README.md  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  debug.bat  release.bat
shader/: compute_shader.comp  compute_shader.glsl  quad_vertex.vs
src/: bvh.h  camera.h  compute_shader.h  main.cpp  renderer.cpp  renderer.h  shader.h  window.cpp  window.h  world.h
